@@ -16,6 +16,13 @@ Core and Builtins
   the python debugger steps into a class statement: the free variables (local
   variables defined in an outer scope) would be deleted from the outer scope.
 
+- Issue #2620: Overflow checking when allocating or reallocating memory
+  was not always being done properly in some python types and extension
+  modules.  PyMem_MALLOC, PyMem_REALLOC, PyMem_NEW and PyMem_RESIZE have
+  all been updated to perform better checks and places in the code that
+  would previously leak memory on the error path when such an allocation
+  failed have been fixed.
+
 Library
 -------
 
